--- a/index.html
+++ b/index.html
@@ -4,9 +4,135 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML Cheat Sheet</title>
 </head>
 <body>
-    <h1>My name is Anna!</h1>
+    <a href="blog.html">Go to blog page</a>
+    <!--Headings-->
+    <h1>Heading One</h1>
+    <h2>Heading Two</h2>
+    <h3>Heading Three</h3>
+    <h4>Heading Four</h4>
+    <h5>Heading Five</h5>
+    <h6>Heading Six</h6>
+
+    <!--Paragrah-->
+    <p>Lorem ipsum dolor sit amet, <strong>consectetur</strong> adipisicing elit. Voluptatem iure beatae odio quasi sunt laborum doloribus quo quas animi architecto, corporis debitis molestiae sequi asperiores quisquam voluptas cumque molestias ullam.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium sint similique quia enim odio, <em>facilis</em> facere itaque, modi totam minima tempore neque at delectus adipisci <a href="https://www.google.com/" target="_blank"> commodi</a> optio. Velit, repellendus eaque.</p>
+    <!--Lists-->
+    <ul>
+        <li>List Item 1</li>
+        <li>List Item 2</li>
+        <li>List Item 3</li>
+        <li>List Item 4</li>
+    </ul>
+    <ol>
+        <li>List Item 1</li>
+        <li>List Item 2</li>
+        <li>List Item 3</li>
+        <li>List Item 4</li>
+    </ol>
+
+    <!--Table-->
+    <table>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Age</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>                
+                <th>Person 1</th>
+                <th>person1@email.com</th>
+                <th>01</th>
+            </tr>
+            <tr>                
+                <th>Person 2</th>
+                <th>person2@email.com</th>
+                <th>02</th>
+            </tr>
+            <tr>                
+                <th>Person 3</th>
+                <th>person3@email.com</th>
+                <th>03</th>
+            </tr>
+        </tbody>
+    </table>
+    <br>
+    <hr>
+    <br>
+<!--Forms-->
+<form action="process.php" method="GET"
+<br>
+<div>
+<label>First Name</label>
+<input type="text" name="firstName" placeholder="Enter first name">
+</div>
+<br>
+<div>
+<label>Last Name</label>
+<input type="text" name="lastName">
+</div>
+<br>
+<div>
+<label>Email</label>
+<input type="email" name="email">
+</div>
+<br>
+<div>
+<label>Message</label>
+<textarea name="message"></textarea>
+</div>
+<br>
+<div>
+<label>Gender</label>
+<select name="gender">
+    <option value="male">Male</option>
+    <option value="female">Female</option>
+    <option value="other">Other</option>
+</select>
+</div>
+<br>
+<div>
+<label>Age</label>
+<input type="number" name="age" value="30">
+</div>
+<br>
+<div>
+<label>Birthday</label>
+<input type="date" name="birthday" value="30">
+</div>
+<br>
+<div>
+<input type="submit" name="submit" value="submit">
+</div>
+</form>
+<br>
+<hr>
+<br>
+<!--Button-->
+<button>Click Me</button>
+<br>
+<hr>
+<br>
+<!--Image-->
+<a href="sample.jpg">
+<img src="sample.jpg" alt="My Sample Image" width="200">
+</a>
+<br>
+<hr>
+<!--Quotations-->
+<blockquote cite="https://www.google.com/">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, voluptas? Vero laborum minima suscipit nemo modi quae hic similique sit autem?</blockquote>
+
+<p>The <abbr title="World Wide Web">WWW</abbr> is awesome</p>
+
+<p><cite>Lorem</cite> ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+
+<div style="margin-top:500px" </div>
+
+
 </body>
 </html>
