--- a/htmltutorial/index.html
+++ b/htmltutorial/index.html
@@ -19,10 +19,10 @@
         </nav>
         <header>
             <div class="row">
-            <div>
+            <div class="home__description">
                 <h1>Best place to learn Frontend</h1>
                 <p class="subheader">Go from being an absolute beginner to pro with a simplified process.</p>
-                <button>Start Now</button>
+                <button class="home__description--button">Start Now</button>
             </div>
             <figure><img src="assets/laptop.png" alt="laptop"> </figure>
             </div>
@@ -32,40 +32,49 @@
     <main>
         <section id="about">
             <h2>About</h2>
+            <div class="row">
             <div class="section__description">
                 <div class="section__description--wrapper">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste omnis placeat temporibus nemo amet, laborum molestias totam voluptatum doloremque voluptate et doloribus consectetur nam ipsam ipsum laboriosam libero, dolores odit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum mollitia voluptatem deleniti nemo eveniet est quasi velit perferendis nam sunt repudiandae rerum ullam cumque magnam dolorum voluptate ipsa, esse assumenda?</p>
+                    <p class="section__description--para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste omnis placeat temporibus nemo amet, laborum molestias totam voluptatum doloremque voluptate et doloribus consectetur nam ipsam ipsum laboriosam libero, dolores odit.</p>
+                    <p class="section__description--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum mollitia voluptatem deleniti nemo eveniet est quasi velit perferendis nam sunt repudiandae rerum ullam cumque magnam dolorum voluptate ipsa, esse assumenda?</p>
                 </div>
                 <figure><img src="./assets/about.jpg" class="about__img--wrapper" alt="about"></figure>
-        </div>
+            </div>
+         </div>
         </section>
         <section id="discord">
             <h2>Discord</h2>
-            <figure><img src="./assets/discord.png" alt="discord"></figure>
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et repellat porro deleniti animi hic dolorem minus laboriosam commodi fugit ut corporis, voluptas corrupti doloribus adipisci. Rem voluptas fugiat provident blanditiis.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione incidunt ea alias, delectus est quasi ex dolores iste. Delectus totam molestiae omnis. Nostrum fugit error facere recusandae laudantium commodi soluta!</p>
+            <div class="row">
+                <div class="section__description">
+                <figure><img src="./assets/discord.png" alt="discord"></figure>
+                <div class="section__description--wrapper">                
+                    <p class="section__description--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et repellat porro deleniti animi hic dolorem minus laboriosam commodi fugit ut corporis, voluptas corrupti doloribus adipisci. Rem voluptas fugiat provident blanditiis.</p>
+                    <p class="section__description--para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione incidunt ea alias, delectus est quasi ex dolores iste. Delectus totam molestiae omnis. Nostrum fugit error facere recusandae laudantium commodi soluta!</p>
+                </div>
+                </div>
             </div>
         </section>
         <section id="contact">
-            <h2>Contact</h2>
-            <form action="">
-                <label="email">Email</label>
-                <input type="text" placeholder="jane@example.com">
-                <label="message">Message</label>
-                <textarea type="text" placeholder="Nice website, lets connect!">
-            </form>
+            <div class="row"></div>
+                <h2>Contact</h2>
+                <form action="">
+                <span>Email</span>                
+                <input type="email" placeholder="jane@example.com">
+                    <span>Message</span>
+                    <textarea type="text" placeholder="Nice website, lets connect!"></textarea>
+                    <button>Contact Us!</button>
+                </form>
+            </div>
         </section>
     </main>
     
     <footer>
-        <img src="./assets/FES.svg" alt="logo">
-        <div>
-            <a href="#about">About</a>
-            <a href="#about">Discord</a>
-            <a href="#about">Contact</a>
-            <a href="#about">Courses</a>
+        <img class="footer__logo" src="./assets/FES.svg" alt="logo">
+        <div class="footer__links">
+            <a class="footer__link" href="#discord">Discord</a>
+            <a class="footer__link" href="#about">About</a>
+            <a class="footer__link" href="#contact">Contact</a>
+            <a class="footer__link" href="#courses">Courses</a>
         </div>
         <p>Copyright</p>
     </footer>
